Add page content for Burrito recipe
In this iteration, I added an image of the finished dish, a
description, an ingredients list, and steps for the Chipotle Oregon
Burritos recipe. To distinguish the ingredients from the steps, I
used an unordered list for the recipes and an ordered list from the
steps as appropriate given context.

--- a/recipes/chipotle-oregon-burritos.html
+++ b/recipes/chipotle-oregon-burritos.html
@@ -7,5 +7,41 @@
 
     <body>
         <h1>Chipotle Oregon Burritos</h1>
+        <img src="./images/burrito.jpeg">
+        <h2>Description</h2>
+        <p>These Chipotle Oregon burritos are spicy, packed with French fries and carne asada, are meal-preppable, and will have you harkening back to that Oregon Trail video game you played in elementary school... for some reason. They are also macro-friendly, with 590 calories, 53 grams of protein, and only 26 grams of fat per serving. In a recipe that makes 5 servings, you'll be enjoying these healthy, spicy wonders all week long. Let's get started!</p>
+        <h2>Ingredients</h2>
+        <h3>Burrito Filling</h3>
+        <ul>
+            <li>1.5lb 96/4 lean ground beef</li>
+            <li>2.5oz green chiles</li>
+            <li>1.5 cups fat-free refried beans</li>
+            <li>1lb Ore-Ida fries or potatoes</li>
+            <li>1 cup reduced fat cheese</li>
+            <li>3/4 cup beef broth</li>
+            <li>5 low carb/high protein tortillas</li>
+        </ul>
+        <h3>Chipotle Sauce</h3>
+        <ul>
+            <li>3/4 cup fat-free Greek yogurt</li>
+            <li>1.25 cup light mayo</li>
+            <li>Half-bundle fresh cilantro</li>
+            <li>2.5oz green chiles</li>
+            <li>Small squirt of lime juice</li>
+            <li>Garlic or Himalayan pink salt to taste</li>
+            <li>Garlic powder to taste</li>
+            <li>Onion powder to taste</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Spray potatoes/fries with cooking spray, salt to taste, then follow oven cooking instructions.</li>
+            <li>Add a squirt of lime juice to refried beans, briefly stir, then cook beans in a pot on low heat.</li>
+            <li>Add ground beef to a pan and season (taco seasoning, additional meat seasonings to taste).</li>
+            <li>Brown the ground beef, then drain grease.</li>
+            <li>Add beef broth and green chiles to beef. Simmer on low heat.</li>
+            <li>Combine chipotle sauce ingredients in a bowl, then blend until smooth.</li>
+            <li>On each tortilla, layer beans, sauce, potatoes, meat, then a portion of the cheese. Wrap the tortilla.</li>
+            <li>Spray a pan with cooking spray, then fry each wrapped burrito until golden brown.</li>
+        </ol>
     </body>
 </html>
