--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/chipotle-oregon-burritos.html">Chipotle Oregon Burritos</a>
+        <ul>
+            <li><a href="recipes/chipotle-oregon-burritos.html">Chipotle Oregon Burritos</a></li>
+            <li><a href="recipes/tuscan-chicken-pasta.html">Tuscan Chicken Pasta</a></li>
+        </ul>
     </body>
 </html>
