--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <ul>
             <li><a href="recipes/chipotle-oregon-burritos.html">Chipotle Oregon Burritos</a></li>
             <li><a href="recipes/tuscan-chicken-pasta.html">Tuscan Chicken Pasta</a></li>
+            <li><a href="recipes/strawberry-protein-cups.html">Strawberry Protein Cups</a></li>
         </ul>
     </body>
 </html>
