Add CSS file, properties to all pages
In this iteration, I added a new stylesheet to start applying CSS
properties across all four pages of this project using external CSS. I
used an overarching class for each recipe page with a few specific
"sub-classes" to maintain consistency of established formatting
structure across all 3 recipe pages.

--- a/recipes/chipotle-oregon-burritos.html
+++ b/recipes/chipotle-oregon-burritos.html
@@ -3,16 +3,17 @@
     <head>
         <meta charset="utf-8">
         <title>kranor2 | Chipotle Oregon Burritos Recipe</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
-        <h1>Chipotle Oregon Burritos</h1>
-        <img src="./images/burrito.jpeg">
-        <h2>Description</h2>
-        <p>These Chipotle Oregon burritos are spicy, packed with French fries and carne asada, are meal-preppable, and will have you harkening back to that Oregon Trail video game you played in elementary school... for some reason. They are also macro-friendly, with 590 calories, 53 grams of protein, and only 26 grams of fat per serving. In a recipe that makes 5 servings, you'll be enjoying these healthy, spicy wonders all week long. Let's get started!</p>
-        <h2>Ingredients</h2>
-        <h3>Burrito Filling</h3>
-        <ul>
+        <h1 class="burrito header">Chipotle Oregon Burritos</h1>
+        <img class="burrito"src="./images/burrito.jpeg">
+        <h2 class="burrito category">Description</h2>
+        <p class="burrito">These Chipotle Oregon burritos are spicy, packed with French fries and carne asada, are meal-preppable, and will have you harkening back to that Oregon Trail video game you played in elementary school... for some reason. They are also macro-friendly, with 590 calories, 53 grams of protein, and only 26 grams of fat per serving. In a recipe that makes 5 servings, you'll be enjoying these healthy, spicy wonders all week long. Let's get started!</p>
+        <h2 class="burrito category">Ingredients</h2>
+        <h3 class="burrito subhead">Burrito Filling</h3>
+        <ul class="burrito">
             <li>1.5lb 96/4 lean ground beef</li>
             <li>2.5oz green chiles</li>
             <li>1.5 cups fat-free refried beans</li>
@@ -21,8 +22,8 @@
             <li>3/4 cup beef broth</li>
             <li>5 low carb/high protein tortillas</li>
         </ul>
-        <h3>Chipotle Sauce</h3>
-        <ul>
+        <h3 class="burrito subhead">Chipotle Sauce</h3>
+        <ul class="burrito">
             <li>3/4 cup fat-free Greek yogurt</li>
             <li>1.25 cup light mayo</li>
             <li>Half-bundle fresh cilantro</li>
@@ -32,8 +33,8 @@
             <li>Garlic powder to taste</li>
             <li>Onion powder to taste</li>
         </ul>
-        <h2>Steps</h2>
-        <ol>
+        <h2 class="burrito category">Steps</h2>
+        <ol class="burrito">
             <li>Spray potatoes/fries with cooking spray, salt to taste, then follow oven cooking instructions.</li>
             <li>Add a squirt of lime juice to refried beans, briefly stir, then cook beans in a pot on low heat.</li>
             <li>Add ground beef to a pan and season (taco seasoning, additional meat seasonings to taste).</li>
