--- a/recipes/tuscan-chicken-pasta.html
+++ b/recipes/tuscan-chicken-pasta.html
@@ -3,15 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title>kranor2 | Tuscan Chicken Pasta</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
-        <h1>Tuscan Chicken Pasta</h1>
+        <h1 class="pasta header">Tuscan Chicken Pasta</h1>
         <img src="./images/pasta.jpeg">
-        <h2>Description</h2>
-        <p>At 64 grams of protein and only 560 calories per serving, this creamy Tuscan chicken pasta is a delicious and easy meal prep idea you can make to have healthy meals for the whole week while feeling more cheatsy than if you'd ordered a Domino's pasta bread bowl. Let's get started!</p>
-        <h2>Ingredients</h2>
-        <ul>
+        <h2 class="pasta category">Description</h2>
+        <p class="pasta-body">At 64 grams of protein and only 560 calories per serving, this creamy Tuscan chicken pasta is a delicious and easy meal prep idea you can make to have healthy meals for the whole week while feeling more cheatsy than if you'd ordered a Domino's pasta bread bowl. Let's get started!</p>
+        <h2 class="pasta category">Ingredients</h2>
+        <ul class="pasta-body">
             <li>1.5 cups cottage cheese</li>
             <li>1/2 cup grated parmesan (reduced fat)</li>
             <li>1/2 cup skim milk</li>
@@ -27,8 +28,8 @@
             <li>1 cup sundried tomatoes</li>
             <li>1/2 cup cooked spinach</li>
         </ul>
-        <h2>Steps</h2>
-        <ol>
+        <h2 class="pasta category">Steps</h2>
+        <ol class="pasta-body">
             <li>Combine cottage cheese, parmesan, milk, tomato paste, minced garlic, and garlic salt into a blender, and blend until smooth.</li>
             <li>Cut chicken breasts into strips.</li>
             <li>Take chicken and season to taste (use suggestions in ingredients list above).</li>
