--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title>kranor2 | Odin Recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="basic">Odin Recipes</h1>
         <ul>
-            <li><a href="recipes/chipotle-oregon-burritos.html">Chipotle Oregon Burritos</a></li>
-            <li><a href="recipes/tuscan-chicken-pasta.html">Tuscan Chicken Pasta</a></li>
-            <li><a href="recipes/strawberry-protein-cups.html">Strawberry Protein Cups</a></li>
+            <li class="burrito"><a href="recipes/chipotle-oregon-burritos.html">Chipotle Oregon Burritos</a></li>
+            <li class="pasta"><a href="recipes/tuscan-chicken-pasta.html">Tuscan Chicken Pasta</a></li>
+            <li class="strawberry"><a href="recipes/strawberry-protein-cups.html">Strawberry Protein Cups</a></li>
         </ul>
     </body>
 </html>
