Edit homepage block styles
In this iteration, I added a div tag grouping for the recipe links
and adjusted margins, padding, text alignment, and display type to
refine overall page layout from list style to "button-ish" style.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
     <body>
         <h1 class="basic">Odin Recipes</h1>
-        <ul>
+        <div><ul>
             <li class="burrito"><a href="recipes/chipotle-oregon-burritos.html">Chipotle Oregon Burritos</a></li>
             <li class="pasta"><a href="recipes/tuscan-chicken-pasta.html">Tuscan Chicken Pasta</a></li>
             <li class="strawberry"><a href="recipes/strawberry-protein-cups.html">Strawberry Protein Cups</a></li>
-        </ul>
+        </ul></div>
     </body>
 </html>
